--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
-streamlit
-neo-api-client
+streamlit>=1.30
+
+git+https://github.com/Kotak-Neo/Kotak-neo-api-v2.git@v2.0.1
+
 git+https://github.com/rongardF/tvdatafeed.git
+
 pyotp==2.8.0
 requests==2.31.0
